other fixes regarding spacing

--- a/src/App.css
+++ b/src/App.css
@@ -3975,7 +3975,7 @@ h4.navbarItems:hover {
 @media (max-width:390px) and (min-width:361px) {
 
   .body-container {
-    width: 100%;
+    width: 82%;
     margin: 0;
   }
 
@@ -4036,12 +4036,14 @@ h4.navbarItems:hover {
 
   .start-img {
     width: 100%;
-    margin: 1px 135px 1px 1px;
+    margin: 1px 80px 1px 1px;
+    position: relative;
+    right: 10px;
   }
 
   .start-img .start {
-    margin: 1px 1px 1px 22px;
-    width: 135%;
+    margin: 1px 1px 1px 13px;
+    width: 150%;
     position: relative;
     top: 60px;
   }
@@ -4054,11 +4056,12 @@ h4.navbarItems:hover {
   }
 
   .Main-container {
-    margin: 15px 1px 5px 45px;
+    margin: 1px 1px 5px 1px;
     padding: 5px;
     width: 80%;
     position: relative;
-    right: 65px;
+    right: 40px;
+    top: 100px;
   }
 
   .Main-container .grid-1 .title {
@@ -4066,245 +4069,183 @@ h4.navbarItems:hover {
   }
 
   .Main-container .grid-1 .title .highlight {
-    font-size: 0.9em;
+    font-size: 1.1em;
   }
 
   .Main-container .grid-1 {
-    width: 80%;
+    width: 95%;
   }
 
   .Main-container .grid-1 .landing-page-text {
-    width: 100%;
+    width: 85%;
   }
 
   .Main-container .grid-1 .landing-page-text p, h2 {
     padding: 10px 1px 1px 1px;
-    font-size: 0.78em;
   }
 
   .Main-container .grid-2 {
-    width: 75%;
-    height: 88%;
-    position: relative;
-    bottom: 40px;
-    left: 10px;
+    width: 85%;
   }
 
   .Main-container .grid-2 .landing-page-image .bankimage {
     position: relative;
-    right: 30px;
-    top: 15px;
-    width: 80%;
-    height: 90%;
+    right: 15px;
   }
 
   .Main-container .grid-3 {
     position: relative;
-    bottom: 150px;
-    right: 10px;
-    font-size: 0.9em;
-    width: 95%;
+    bottom: 60px;
+    font-size: 1.20em;
   }
 
   .Main-container .grid-3 .bullet-text {
     margin: 5px 5px 5px 5px;
-    width: 100%;
-    font-weight: normal;
+    width: 85%;
   }
 
   .mid-container {
-    margin: 5px 1px 5px 40px;
+    margin: 5px 1px 5px 1px;
     padding: 2px;
     position: relative;
-    right: 50px;
-    width: 90%;
+    width: 80%;
+    right: 40px;
+    top: 80px;
   }
 
   .mid-container .grid-1 {
-    width: 80%;
-    position: relative;
-    left: 5px;
+    width: 95%;
   }
 
   .mid-container .grid-1 .title .highlight {
-    font-size: 0.8em;
+    font-size: 1.0em;
     right: 5px;
-    margin: 1px 1px 1px 1px;
-    padding: 0px;
+    margin: 1px 10px 1px 1px;
   }
 
   .mid-container .grid-1 .title .lowlight {
-    font-size: 0.8em;
+    font-size: 1.0em;
     right: 5px;
-    margin: 1px 1px 1px 1px;
-    padding: 0px;
-
+    margin: 1px 10px 1px 1px;
   }
 
   .mid-container .grid-1 .landing-page-text {
-    width: 100%;
+    width: 90%;
     left: 0px;
-    font-size: 0.78em;
   }
 
   .mid-container .grid-2 {
     height: 70%;
     position: relative;
-    right: 10px;
     top: 0px;
-    width: 85%;
   }
 
   .mid-container .grid-2 .landing-page-image .bankimage {
-    margin: 10px 1px 1px 1px;
-    width: 80%;
-    position: relative;
-    left: 20px;
-    height: 90%;
+    margin: 10px 1px 1px 35px;
   }
 
   .mid-container .grid-3 {
     margin: 1px 1px 1px 1px;
     position: relative;
     left: 10px;
-    bottom: 210px;
-    width: 85%;
+    bottom: 100px;
+    font-size: 1.52em;
+    width: 90%;
   }
 
-  .mid-container .grid-3 .bullet-text h2 {
-    font-size: 0.87em;
-  }
-
-  .mid-container .grid-3 .bullet-text p {
-    width: 100%;
+  .mid-container .grid-3 .bullet-text {
+    width: 95%;
     left: 0px;
     position: relative;
-    top: 5px;
-    font-size: 0.78em;
+    bottom: 100px;
   }
 
   .lower-container {
-    margin: 5px 1px 1px 50px;
-    width: 90%;
+    margin: 5px 1px 5px 1px;
     padding: 5px;
-    position: relative;
-    right: 60px;
-  }
-
-  .lower-container .grid-1 {
     width: 80%;
     position: relative;
-    left: 5px;
+    right: 50px;
+    bottom: 70px;
   }
 
   .lower-container .grid-1 .title .highlight {
-    font-size: 0.99em;
+    font-size: 1.45em;
   }
 
   .lower-container .grid-1 .landing-page-text {
     width: 95%;
-    font-size: 0.78em;
   }
 
   .lower-container .grid-2 {
-    height: 95%;
-    width: 65%;
+    height: 100%;
     position: relative;
-    bottom: 60px;
-    left: 5px;
+    top: 20px;
   }
 
   .lower-container .grid-2 .landing-page-image .bankimage {
-    position: relative;
-    right: 25px;
-    top: 50px;
-    width: 80%;
-    height: 80%;
+    left: 165px;
   }
 
   .lower-container .grid-3 {
     position: relative;
-    bottom: 185px;
-    width: 90%;
+    bottom: 0px;
+    font-size: 1.52em;
   }
 
-  .lower-container .grid-3 .bullet-text h2 {
-    font-size: 0.92em;
-  }
-
-  .lower-container .grid-3 .bullet-text p {
-    width: 100%;
+  .lower-container .grid-3 .bullet-text {
+    width: 95%;
     left: 55px;
-    font-size: 0.78em;
   }
 
   .fourth-container {
-    margin: 5px 1px 5px 15px;
+    margin: 5px 1px 5px 1px;
     padding: 5px;
     position: relative;
-    right: 50px;
+    right: 35px;
+    bottom: 30px;
     width: 80%;
   }
 
   .fourth-container .grid-1 .title .highlight {
-    font-size: 0.95em;
-  }
-
-  .fourth-container .grid-1 .title .lowlight {
-    font-size: 0.95em;
+    font-size: 1.23em;
   }
 
   .fourth-container .grid-1 {
-    width: 90%;
+    width: 100%;
   }
 
   .fourth-container .grid-1 .landing-page-text {
-    width: 95%;
-    font-size: 0.78em;
+    width: 100%;
   }
 
   .fourth-container .grid-2 {
-    height: 70%;
+    height: 95%;
     width: 70%;
     position: relative;
-    left: 30px;
-    bottom: 20px;
-  }
-
-  .fourth-container .grid-2 .landing-page-image {
-    position: relative;
-    right: 30px;
+    top: 20px;
   }
 
   .fourth-container .grid-2 .landing-page-image .cell {
     position: relative;
-    margin: 1px;
-    left: 10px;
-    width: 80%;
-    height: 100%;
+    right: 40px;
   }
 
   .fifth-container {
-    margin: 5px 1px 5px 15px;
+    margin: 5px 1px 5px 0px;
     padding: 4px;
     width: 85%;
     position: relative;
-    right: 35px;
+    top: 50px;
+    right: 20px;
   }
 
   .fifth-container .grid-1 {
-    width: 90%;
-    position: relative;
-    right: 10px;
+    width: 95%;
   }
 
-  .fifth-container .grid-1 .bullet-text h2 {
-    font-size: 0.87em;
-  }
-
-  .fifth-container .grid-1 .bullet-text p {
+  .fifth-container .grid-1 .bullet-text {
     width: 100%;
-    font-size: 0.78em;
   }
 
   .fifth-container .grid-1 .title {
@@ -4312,53 +4253,42 @@ h4.navbarItems:hover {
   }
 
   .fifth-container .grid-1 .title .business {
-    font-size: 0.98em;
+    font-size: 1.5em;
 
   }
 
   .fifth-container .grid-2 {
-    margin: 1px;
     height: 90%;
-    width: 70%;
+    width: 60%;
     position: relative;
-    left: 45px;
+    left: 0px;
     bottom: 40px;
   }
 
-  .fifth-container .landing-page-image {
-    position: relative;
-    right: 50px;
-  }
-
   .fifth-container .grid-2 .landing-page-image .bankimage {
-    width: 80%;
-    height: 80%;
-    margin: 1px;
+    width: 90%;
+    height: 90%;
+    margin: 30px 1px 1px 0px;
     position: relative;
     left: 25px;
     bottom: 10px;
   }
 
   .fifth-container .grid-3 {
+    font-size: 1.52em;
     width: 90%;
     position: relative;
-    bottom: 250px;
+    bottom: 160px;
     right: 10px;
   }
 
   .fifth-container .grid-3 .landing-page-text {
     width: 100%;
-    margin: 1px;
-    font-size: 0.78em;
-  }
-
-  .Main-container, .mid-container, .lower-container, .fourth-container, .fifth-container {
-    position: relative;
-    right: 35px;
+    margin: 1px 1px 1px 10px;
   }
 
   .perks {
-    margin: 20px 20px 20px 35px;
+    margin: 20px 20px 20px 55px;
     padding: 10px 10px 10px 10px;
     position: relative;
     left: 5px;
@@ -4455,7 +4385,7 @@ h4.navbarItems:hover {
   .Footer {
     margin: 1px 1px 1px 1px;
     position: relative;
-    left: -10px;
+    left: 5px;
     font-size: 0.53em;
   }
 
